--- a/List/.classpath
+++ b/List/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/marad002/Downloads/List/List.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Downloads/List.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
